--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -6,10 +6,13 @@
   <h1>
     Последние обновления на сайте
   </h1>
-  {% include 'posts/includes/switcher.html' %}
-  {% for post in page_obj %}
-    {% include 'posts/includes/post_card.html' %}
-      <hr>
-  {% endfor %}
-  {% include 'posts/includes/paginator.html' %}
+  {% include 'posts/includes/switcher.html' with index=True  %}
+  {% load cache %}
+  {% cache 20 index_page %}
+    {% for post in page_obj %}
+      {% include 'posts/includes/post_card.html' %}
+        <hr>
+    {% endfor %}
+    {% include 'posts/includes/paginator.html' %}
+  {% endcache %}
 {% endblock %}
