--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -7,22 +7,26 @@
     <h1>
       Все посты пользователя {{ author.get_full_name }}
     </h1>
-    <h3>Всего постов: {{ post.author.posts.count }} </h3>
-    {% if following %}
-      <a
-        class="btn btn-lg btn-light"
-        href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-      >
-        Отписаться
-      </a>
-    {% else %}
+    <h3>Всего постов: {{ author.posts.count }} </h3>
+    <h3>Всего подписок: {{ author.follower.count }} </h3>
+    <h3>Всего подписчиков: {{ author.following.count }} </h3>
+    {% if user.is_authenticated and user != author %}
+      {% if following %}
+        <a
+          class="btn btn-lg btn-light"
+          href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+        >
+          Отписаться
+        </a>
+      {% else %}
       <a
         class="btn btn-lg btn-primary"
         href="{% url 'posts:profile_follow' author.username %}" role="button"
       >
         Подписаться
       </a>
-   {% endif %}
+      {% endif %}
+    {% endif %}
   </div>
   {% for post in page_obj %}
     {% include 'posts/includes/post_card.html' with profile_flag=True %}
