--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -21,7 +21,7 @@
       {% include 'includes/header.html' %}
     </header>
     <main> 
-      <div class="container py-5">
+      <div class="container py-5 shadow-sm">
         {% block content %}
         Содержание страницы.
         {% endblock %}
