--- a/yatube/templates/posts/includes/comments.html
+++ b/yatube/templates/posts/includes/comments.html
@@ -2,7 +2,7 @@
 {% load user_filters %}
 
 {% if user.is_authenticated %}
-  <div class="card my-4">
+  <div class="card my-4 shadow-sm">
     <h5 class="card-header">Добавить комментарий:</h5>
     <div class="card-body">
       <form method="post" action="{% url 'posts:add_comment' post.id %}">
@@ -17,8 +17,9 @@
 {% endif %}
 
 {% for comment in comments %}
-  <div class="media mb-4">
-    <div class="media-body">
+<div class="card mb-3 mt-1 shadow-sm">
+  <div class="media mb-4 ">
+    <div class="media-body card-body">
       <h5 class="mt-0">
         <a href="{% url 'posts:profile' comment.author.username %}">
           {{ comment.author.username }}
@@ -29,4 +30,5 @@
       </p>
     </div>
   </div>
+</div>
 {% endfor %}
