--- a/yatube/templates/posts/includes/post_card.html
+++ b/yatube/templates/posts/includes/post_card.html
@@ -1,31 +1,46 @@
 {% load thumbnail %}
-<article>
-  <ul>
-    <li>
-      Автор: {{ post.author.get_full_name }}
-      {% if not profile_flag %}
-        <a href="{%url 'posts:profile' post.author %}">все посты пользователя</a>
+<div class="card mb-3 mt-1 shadow-sm">
+  <div class="card-body">
+    <ul>
+      <li>
+        Автор: 
+        {% if not profile_flag %}
+          <a href="{%url 'posts:profile' post.author %}">{{ post.author.get_full_name }}</a>
+        {% else %}
+          {{ post.author.get_full_name }}
+        {% endif %}
+      </li>
+      <li>
+        Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      </li>
+    </ul>
+      {% thumbnail post.image "960x339" crop="center"  upscale=True as im %}
+        <img class="card-img my-2"  src="{{ im.url }}">
+      {% endthumbnail %}    
+    <p class="card-text">
+      {{ post.text|linebreaks }}
+    </p>
+    {% if not group_flag %}
+      {% if post.group %}
+        <a href="{%url 'posts:group_list' post.group.slug %}">
+          #{{ post.group }}
+        </a>
+      {% else %}
+      <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
       {% endif %}
-    </li>
-    <li>
-      Дата публикации: {{ post.pub_date|date:"d E Y" }}
-    </li>
-  </ul>
-  {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-    <img class="card-img my-2" src="{{ im.url }}">
-  {% endthumbnail %}     
-  <p>
-    {{ post.text|linebreaks }}
-  </p>
-  <a href="{%url 'posts:post_detail' post.pk %}">подробная информация </a>
-  <br>
-  {% if not group_flag %}
-    {% if post.group %}
-      <a href="{%url 'posts:group_list' post.group.slug %}">
-        все записи группы {{ post.group }}
-      </a>
-    {% else %}
-    <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
+      <br><br>
     {% endif %}
-  {% endif %}
-</article>
+    {% if post.comments.count == 0 %}
+      <p>
+        Комментариев пока нет.
+      </p>
+    {% else %}
+      <p> Комментариев {{ post.comments.count }} </p>
+    {% endif %}
+    <br>
+    <a class="btn btn-lg btn-primary"
+        href="{%url 'posts:post_detail' post.pk %}" role="button">
+        подробная информация </a>
+    <br>
+  </div>
+</div>
