--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -4,50 +4,46 @@
   Пост {{post|truncatechars:30}}
 {% endblock %}
 {% block content %}
-  <div class="row">
-    <aside class="col-12 col-md-3">
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-          Дата публикации: <b> {{ post.pub_date|date:"d E Y" }} </b>
-        </li>
-        <li class="list-group-item">
-          {% if post.group %}
-            Группа: <b> {{ post.group }} </b>
-            <br>
-            <a href="{%url 'posts:group_list' post.group.slug %}">
-              все записи группы
-            </a>
-          {% else %}
-            <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
-          {% endif %}
-        </li>
-        <li class="list-group-item">
-          Автор: <b> {{ post.author.get_full_name }} </b>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Всего постов автора:  <span >{{ post.author.posts.count }}</span> 
-        </li>
-        <li class="list-group-item">
-          <a href="{%url 'posts:profile' post.author %}">
-            все посты пользователя
-          </a>
-        </li>
-      </ul>
-    </aside>
-    <article class="col-12 col-md-9">
-      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img my-2" src="{{ im.url }}">
-      {% endthumbnail %}
-      <p>
-        {{ post.text|linebreaks }}
-      </p>
-      {% if user.is_authenticated and post.author == user %}
-        <a class="btn btn-primary" href="{%url 'posts:post_edit' post.pk %}">
-          редактировать запись
-        </a>
-      {% endif %}             
-    </article>
-    {% include 'posts/includes/comments.html' %}
-    <hr>
-  </div> 
+<div class="row">
+  <div class="col-15">
+    <div class"container py-5 shadow-sm">
+      <h1>
+        Подробности публикации
+        <hr>
+      </h1>
+      <div class="row col-md-14">
+        <aside class="col-12 col-md-3 mb-2 mt-2 shadow-sm">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              Дата публикации: <b> {{ post.pub_date|date:"d E Y" }} </b>
+            </li>
+            <li class="list-group-item">
+              {% if post.group %}
+                Группа: 
+                <a href="{%url 'posts:group_list' post.group.slug %}"> 
+                  {{ post.group }} </a>
+                <br>
+              {% else %}
+                <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
+              {% endif %}
+            </li>
+            <li class="list-group-item">
+              Автор: 
+              <a href="{%url 'posts:profile' post.author %}"> 
+                {{ post.author.get_full_name }}
+              </a>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Всего постов автора:  <span >{{ post.author.posts.count }}</span> 
+            </li>
+          </ul>
+        </aside>
+        <article class="col-12 col-md-9">
+          {% include 'posts/includes/post_card.html' with profile_flag=False %}
+          {% include 'posts/includes/comments.html' %}
+        </article>
+      </div>
+    </div>
+  </div>
+</div> 
 {% endblock %}
