--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -3,37 +3,57 @@
   Профайл пользователя {{ author }}
 {% endblock %}
 {% block content %}
-  <div class="mb-5">
-    <h1>
-      Все посты пользователя {{ author.get_full_name }}
-    </h1>
-    <h3>Всего постов: {{ author.posts.count }} </h3>
-    <h3>Всего подписок: {{ author.follower.count }} </h3>
-    <h3>Всего подписчиков: {{ author.following.count }} </h3>
-    {% if user.is_authenticated and user != author %}
-      {% if following %}
-        <a
-          class="btn btn-lg btn-light"
-          href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-        >
-          Отписаться
-        </a>
-      {% else %}
-      <a
-        class="btn btn-lg btn-primary"
-        href="{% url 'posts:profile_follow' author.username %}" role="button"
-      >
-        Подписаться
-      </a>
-      {% endif %}
-    {% endif %}
+  <div class="row">
+    <div class="col-15">
+      <div class"container py-5 shadow-sm">
+        <h1>
+          Профайл пользователя {{ author.get_full_name }}
+          <hr>
+        </h1>
+        <div class="row col-md-14">
+          <aside class="col-12 col-md-3 mb-2 mt-2 shadow-sm">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <h3>Автор: <b> {{ author.get_full_name }} </b></h3>
+              </li>
+              <li class="list-group-item">
+                Всего постов: {{ author.posts.count }}
+              </li>
+              <li class="list-group-item">
+                Всего подписок: {{ author.follower.count }}
+              </li>
+              <li class="list-group-item">
+                Всего подписчиков: {{ author.following.count }}
+              </li>
+              <li class="list-group-item">
+                {% if user.is_authenticated and user != author %}
+                {% if following %}
+                  <a
+                    class="btn btn-lg btn-light"
+                    href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+                  >
+                    Отписаться
+                  </a>
+                {% else %}
+                <a
+                  class="btn btn-lg btn-primary"
+                  href="{% url 'posts:profile_follow' author.username %}" role="button"
+                >
+                  Подписаться
+                </a>
+                {% endif %}
+              {% endif %}
+              </li>
+            </ul>
+          </aside>
+          <article class="col-12 col-md-9">
+            {% for post in page_obj %}
+              {% include 'posts/includes/post_card.html' with profile_flag=True %}
+            {% endfor %}
+            {% include 'posts/includes/paginator.html' %}
+          </article>
+        </div>
+      </div>
+    </div>
   </div>
-  {% for post in page_obj %}
-    {% include 'posts/includes/post_card.html' with profile_flag=True %}
-      <hr>
-    {% if not forloop.last %}
-      <hr>
-    {% endif %}
-  {% endfor %}
-  {% include 'posts/includes/paginator.html' %}  
 {% endblock %}
