--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -39,7 +39,7 @@
           </ul>
         </aside>
         <article class="col-12 col-md-9">
-          {% include 'posts/includes/post_card.html' with profile_flag=False %}
+          {% include 'posts/includes/post_card.html' with post_detail_flag=True %}
           {% include 'posts/includes/comments.html' %}
         </article>
       </div>
