--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -36,6 +36,31 @@
             <li class="list-group-item d-flex justify-content-between align-items-center">
               Всего постов автора:  <span >{{ post.author.posts.count }}</span> 
             </li>
+            <li class="list-group-item">
+              Всего подписок: {{ post.author.follower.count }}
+            </li>
+            <li class="list-group-item">
+              Всего подписчиков: {{ post.author.following.count }}
+            </li>
+            <li class="list-group-item">
+              {% if user.is_authenticated and user != post.author %}
+                {% if following %}
+                  <a
+                    class="btn btn-lg btn-light"
+                    href="{% url 'posts:profile_unfollow' post.author.username %}" role="button"
+                  >
+                    Отписаться
+                  </a>
+                {% else %}
+                <a
+                  class="btn btn-lg btn-primary"
+                  href="{% url 'posts:profile_follow' post.author.username %}" role="button"
+                >
+                  Подписаться
+                </a>
+                {% endif %}
+              {% endif %}
+            </li>
           </ul>
         </aside>
         <article class="col-12 col-md-9">
