--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -36,11 +36,11 @@
             <li class="list-group-item d-flex justify-content-between align-items-center">
               Всего постов автора:  <span >{{ post.author.posts.count }}</span> 
             </li>
-            <li class="list-group-item">
-              Всего подписок: {{ post.author.follower.count }}
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Всего подписок: <span >{{ post.author.follower.count }}</span>
             </li>
-            <li class="list-group-item">
-              Всего подписчиков: {{ post.author.following.count }}
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              Всего подписчиков: <span >{{ post.author.following.count }}</span>
             </li>
             <li class="list-group-item">
               {% if user.is_authenticated and user != post.author %}
