--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row">
   <aside class="col-12 col-md-3">
-    <img src={% static 'img/logo.png' %} width="150" height="150" class="d-inline-block align-top" alt="">
+    <img src={% static 'img/IMG_2226.jpg' %} width="180" height="240" class="d-inline-block align-top" alt="">
   </aside>
   <article class="col-12 col-md-8">
     <h1>Привет, я Дунаева Клавдия - автор данного проекта.</h1>
