--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,74 +1,24 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
 {% block title %}
-  Пост {{post|truncatechars:30}}
+  Пост {{ post|truncatechars:30}}
 {% endblock %}
 {% block content %}
-<div class="row">
-  <div class="col-15">
-    <div class"container py-5 shadow-sm">
-      <h1>
-        Подробности публикации
-        <hr>
-      </h1>
-      <div class="row col-md-14">
-        <aside class="col-12 col-md-3 mb-2 mt-2 shadow-sm">
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              Дата публикации: <b> {{ post.pub_date|date:"d E Y" }} </b>
-            </li>
-            <li class="list-group-item">
-              {% if post.group %}
-                Группа: 
-                <a href="{%url 'posts:group_list' post.group.slug %}"> 
-                  {{ post.group }} </a>
-                <br>
-              {% else %}
-                <span style='color: red'>Этой публикации нет ни в одном сообществе.</span>
-              {% endif %}
-            </li>
-            <li class="list-group-item">
-              Автор: 
-              <a href="{%url 'posts:profile' post.author %}"> 
-                {{ post.author.get_full_name }}
-              </a>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора:  <span >{{ post.author.posts.count }}</span> 
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего подписок: <span >{{ post.author.follower.count }}</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего подписчиков: <span >{{ post.author.following.count }}</span>
-            </li>
-            <li class="list-group-item">
-              {% if user.is_authenticated and user != post.author %}
-                {% if following %}
-                  <a
-                    class="btn btn-lg btn-light"
-                    href="{% url 'posts:profile_unfollow' post.author.username %}" role="button"
-                  >
-                    Отписаться
-                  </a>
-                {% else %}
-                <a
-                  class="btn btn-lg btn-primary"
-                  href="{% url 'posts:profile_follow' post.author.username %}" role="button"
-                >
-                  Подписаться
-                </a>
-                {% endif %}
-              {% endif %}
-            </li>
-          </ul>
-        </aside>
-        <article class="col-12 col-md-9">
-          {% include 'posts/includes/post_card.html' with post_detail_flag=True %}
-          {% include 'posts/includes/comments.html' %}
-        </article>
+  <div class="row">
+    <div class="col-15">
+      <div class="container py-5 shadow-sm">
+        <h1>
+          Подробности публикации
+          <hr>
+        </h1>
+        <div class="row col-md-14">
+         {% include 'posts/includes/user_card.html' %}
+          <article class="col-12 col-md-9">
+            {% include 'posts/includes/post_card.html' with post_detail_flag=True %}
+            {% include 'posts/includes/comments.html' %}
+          </article>
+        </div>
       </div>
     </div>
   </div>
-</div> 
 {% endblock %}
